--- a/estilo/style.css
+++ b/estilo/style.css
@@ -57,7 +57,7 @@ header > p {
     color: white;
     font-family: var(--fonte-padrao);
     font-size: 1.2em;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
     max-width: 600px;
     padding-right: 10px;
     padding-left: 10px;
